--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "mysql2": "^3.10.0",
     "next": "14.2.1",
     "react": "^18",
